plan combination - easy to change date

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -138,15 +138,17 @@
       <div id="Plan_Combination_title" class="card-header pt-2 pb-2"></div>
       <div class="card-body">
         <div class="form-row" style="max-width: 800px;">
-          <div class="col-md-4 mb-2 input-group input-group-regular">
+          <div class="col-md-5 mb-2 input-group input-group-regular">
             <label for="PlanCombination_startDate" class="input-group-label input-group-text"
               id="PlanCombination_startDate_label"></label>
-            <input id="PlanCombination_startDate" type="date" class="form-control input-group" style="width: auto; max-width: 150px;">
+            <input id="PlanCombination_startDate" type="date" class="form-control input-group" style="width: auto; max-width: 180px;">
+            <button id="PC_changeStartDate" type="button" class="btn btn-outline-dark input-group-btn"><span class="glyphicon glyphicon-pencil"></span></button>
           </div>
-          <div class="col-md-4 mb-2 input-group input-group-regular">
+          <div class="col-md-5 mb-2 input-group input-group-regular">
             <label for="PlanCombination_endDate" class="input-group-label input-group-text"
               id="PlanCombination_endDate_label"></label>
-            <input id="PlanCombination_endDate" type="date" class="form-control" style="width: auto; max-width: 150px;">
+            <input id="PlanCombination_endDate" type="date" class="form-control" style="width: auto; max-width: 180px;">
+            <button id="PC_changeEndDate" type="button" class="btn btn-outline-dark input-group-btn"><span class="glyphicon glyphicon-pencil"></span></button>
           </div>
         </div>
         <div class="form-group input-group-regular mb-4">
