--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -303,7 +303,7 @@
             <div class="input-group-append btn-group-toggle ml-0" data-toggle="buttons">
               <label id="GreatSuccessRateUp_btn" class="btn btn-checkbox disabled"
                 style="padding: 0.3rem 0.7rem; font-size: 0.875rem;">
-                <input type="checkbox" id="GreatSuccessRateUp">UP
+                <input type="checkbox" autocomplete="off" id="GreatSuccessRateUp">UP
               </label>
             </div>
           </div>
@@ -580,15 +580,15 @@
       <span id="permanentAddress"></span><a href="https://chantxu64.github.io/gf"
         target="_blank">https://chantxu64.github.io/gf</a>
     </footer>
-    <footer class="col p-0">
-      <a href="https://github.com/CHANTXU64/Girls-Frontline/wiki" target="_blank">wiki</a>
+    <footer class="col-auto p-0">
+      <a href="https://github.com/CHANTXU64/Girls-Frontline/wiki" target="_blank" style="margin-right: 25px;">wiki</a>
     </footer>
-    <footer class="col p-0">
+    <footer class="col p-0" style="text-align: center;">
       <a id="OfflineVersion" href="https://chantxu64.github.io/GF_logistics_offline.zip"
         download="GF_logistics_offline.zip" target="_blank;"></a>
     </footer>
-    <footer class="col p-0">
-      <a id="version" style="color: #007bff; text-decoration: none; background-color: transparent;"></a>
+    <footer class="col-auto p-0">
+      <a id="version" style="margin-left: 25px; color: #007bff; text-decoration: none; background-color: transparent;"></a>
     </footer>
   </div>
 
