load first - disable buttons

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -88,7 +88,7 @@
         <a class="dropdown-item" id="lang-en">English</a>
       </ul>
     </div><!-- 必须在这两个标签间加空 !python space-->
-    <button type="button" class="btn btn-outline-dark btn-regular" id="help">?</button><!-- 必须在这两个标签间加空 !python space-->
+    <button type="button" class="btn btn-outline-dark btn-regular" id="help" disabled>?</button><!-- 必须在这两个标签间加空 !python space-->
     <div class="spinner-border align-middle" id="page_loading" role="status" style="border-width: 0.2rem; height: 1.5rem; width: 1.5rem;">
       <span class="sr-only">Loading...</span>
     </div><!-- 必须在这两个标签间加空 !python space-->
@@ -309,7 +309,7 @@
           </div>
           <div class="input-group input-group-regular mb-2 disable-selected-text">
             <label class="input-group-text input-group-label" id="h4ChapterLimit" for="ChapterLimit"></label>
-            <select class="custom-select" id="ChapterLimit" autocomplete="off"></select>
+            <select class="custom-select" id="ChapterLimit" disabled autocomplete="off"></select>
           </div>
         </div>
         <!-- setting consumption -->
@@ -532,7 +532,7 @@
             <tr>
               <td colspan=10 class="p-0 border-0">
                 <div class="input-group">
-                  <button class="btn btn-outline-dark" type="button" id="savePlan"
+                  <button class="btn btn-outline-dark" disabled type="button" id="savePlan"
                     style="line-height: 30px; width: 99px; height: 30px; padding:0 6px; font-size:13px; border-width: 1px 0 0 0; border-radius: 0; border-bottom-left-radius: 0.25em;"></button>
                   <button class="btn btn-outline-dark" type="button" id="Capture" disabled
                     style="line-height: 30px; width: 99px; height: 30px; padding:0 6px; font-size:13px; border-bottom-width: 0; border-radius: 0; z-index: 10;"></button>
