--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -415,7 +415,7 @@
         </div>
         <div id="Saved_card" class="collapse" aria-labelledby="Saved_header"
           data-parent="#SavedAndMissionTableGroupCard">
-          <div class="btn-toolbar pl-3 pt-1 pr-3" role="toolbar">
+          <div class="btn-toolbar pl-3 pt-1 pr-3" role="toolbar" style="border-bottom: 1px solid rgba(0,0,0,.125);">
             <div class="input-group input-group-regular mr-2 mb-1">
               <input type="text" class="form-control" style="min-width: 200px;" id="importSaved_input" disabled
                 onclick="this.select();" autocomplete="off">
