No longer compatible with outdated browsers and add warning.

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -118,6 +118,7 @@
   </div>
   <!-- alert -->
   <div class="col-lg-7 float-left alert_card">
+    <div class="alert alert-danger disable-selected-text d-none" id="warn_ancient_browser" role="alert" style="color: #000000;"></div>
     <div class="alert alert-warning alert-dismissible fade show disable-selected-text" id="description" role="alert">
       <span id="description_text" style="color:#000000"></span>
       <button type="button" id="neverShowAgain_description" disabled class="close" data-dismiss="alert" aria-label="Close">
