fix bug - PC chart overlap

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -164,7 +164,7 @@
         <button type="button" class="btn btn-danger mb-2" id="PC_deleteAllPlans"></button><!-- 必须在这两个标签间加空 !python space-->
         <button type="button" class="btn btn-info mb-2" id="PC_saveAll"></button><!-- 必须在这两个标签间加空 !python space-->
         <button type="button" class="btn btn-danger mb-2" id="PC_deletePlan" disabled></button>
-        <div id="PlanCombination_chart" style="height: 300px; width: auto; margin: 0 -10px 1rem -10px"></div>
+        <div id="PlanCombination_chart"></div>
         <div class="card">
           <div class="card-header pt-2 pb-2 border-bottom-0">
             <button class="btn btn-link p-0 collapsed" type="button" data-toggle="collapse"
