--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -383,7 +383,7 @@
               </ul>
             </div>
             <button class="btn btn-outline-dark input-group-btn" id="setTarget_saved_button" style="width: 60px;"></button>
-          </div>
+          </div><!-- 必须在这两个标签间加空 !python space-->
           <button type="button" class="btn btn-danger btn-regular"id="setTarget_Clear" style="margin-bottom: 5px; width: 60px;"></button>
           <div id="setTargetButton"></div>
           <label id="ContractWeight_label" class="btn-toolbar justify-content-between mb-0" for="customRange1">
