fix bug - config style

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -99,8 +99,7 @@
     <hr style="margin: 0.5rem 0 1rem 0; width: 100%;" />
   </h2>
   <!-- config -->
-  <div class="col-lg-5 float-right input-group input-group-regular mb-3 config_card"
-    style="max-width: 440px;">
+  <div class="col-lg-5 float-right input-group input-group-regular mb-3 config_card">
     <label for="Config_importInput" class="input-group-label input-group-text disable-selected-text" id="Config_text"></label>
     <input type="text" class="form-control" style="min-width: 40px;" id="Config_importInput" onclick="this.select();"
       autocomplete="off" disabled>
