--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -684,6 +684,7 @@
   <script src="../js/plan_combination_html_event.js"></script>
   <script src="../js/load_last.js"></script>
   <script src="../js/load_second.js"></script>
+  <script src="../js/lp_test.js"></script>
   <!-- end GF js_2 !python -->
 </body>
 
