create class Plan_Resources_Regen

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -679,6 +679,7 @@
   <script src="../js/plan_combination_logistics_plan.js"></script>
   <script src="../js/plan_combination_chart_option.js"></script>
   <script src="../js/plan_combination_charts.js"></script>
+  <script src="../js/plan_combination_plan.js"></script>
   <script src="../js/plan_combination_ranking.js"></script>
   <script src="../js/plan_combination_html.js"></script>
   <script src="../js/plan_combination_html_event.js"></script>
