pc ranking - remove demand

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -170,15 +170,12 @@
                     data-target="#PC_Ranking_card" aria-expanded="false" aria-controls="PC_Ranking_card"
                     id="PC_Ranking_card_title"></button>
           </div>
-          <div id="PC_Ranking_card" class="collapse">
-            <div class="card-body p-2" id="PlanCombination_demand_card">
-              <h5 id="PC_targetValue_h5"></h5>
-              <div id="PlanCombination_target_re" class="form-row" style="max-width: 980px;"></div>
-              <div id="PlanCombination_target_co" class="form-row" style="max-width: 980px;"></div>
-              <button type="button" class="btn btn-primary mt-2" id="PC_startRanking"></button>
-            </div>
+          <div id="PC_Ranking_card" class="collapse p-2">
+            <h5 id="PC_targetValue_h5"></h5>
+            <div id="PlanCombination_target_re" class="form-row" style="max-width: 980px;"></div>
+            <div id="PlanCombination_target_co" class="form-row" style="max-width: 980px;"></div>
+            <button type="button" class="btn btn-primary" id="PC_startRanking"></button>
           </div>
-        </div>
         </div>
       </div>
     </div>
