--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -596,13 +596,17 @@
   <!-- footer -->
   <div class="col-lg-12 row disable-selected-text m-0 footer_card">
     <hr style="margin: 0; width: 100%;" />
-    <footer class="col-lg-4 p-0">
+    <footer class="col p-0">
       GitHub: <a href="https://github.com/CHANTXU64/Girls-Frontline"
-        target="_blank">https://github.com/CHANTXU64/Girls-Frontline</a>
+        target="_blank" style="margin-right: 25px;">https://github.com/CHANTXU64/Girls-Frontline</a>
     </footer>
-    <footer class="col-lg-3 p-0">
+    <footer class="col p-0">
       <span id="permanentAddress"></span><a href="https://chantxu64.github.io/gf"
-        target="_blank">https://chantxu64.github.io/gf</a>
+        target="_blank" style="margin-right: 25px;">https://chantxu64.github.io/gf</a>
+    </footer>
+    <footer class="col-auto p-0">
+      <span id="Address"></span><a href="https://chantx.net/gf"
+        target="_blank" style="margin-right: 35px;">https://chantx.net/gf</a>
     </footer>
     <footer class="col-auto p-0">
       <a href="https://github.com/CHANTXU64/Girls-Frontline/wiki" target="_blank" style="margin-right: 25px;">wiki</a>
