--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -621,6 +621,7 @@
 
   <!-- GF js_1 !python -->
   <script src="../js/debug.js" crossorigin></script>
+  <script src="../js/debug_function.js"></script>
   <script src="../lang/languages.js"></script>
   <script src="../js/version.js"></script>
   <script src="../js/quick_sort.js"></script>
