tab anytime - delay time

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -240,6 +240,12 @@
                 <label for="Time_Anytime_minutes" class="input-group-label input-group-text"
                   id="tab_Anytime_minute"></label>
               </div>
+              <div class="input-group-append btn-group-toggle ml-0 mb-2" data-toggle="buttons">
+                  <label id="tab_Anytime_delayTime_label" class="btn btn-checkbox"
+                                                     style="padding: 0.3rem 0.7rem; font-size: 0.875rem;">
+                      <input type="checkbox" autocomplete="off" id="tab_Anytime_delayTime">延迟一分钟
+                  </label>
+              </div>
               <h6 id="tab_Anytime_MinimumIntervalTime"></h6>
               <div class="input-group input-group-regular mb-2">
                 <input type="number" min="0" max="60" class="form-control" id="Tab_Anytime_MinimumIntervalTime_minutes"
